# manifold

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  emscripten.txt  imgui.ini
embedTool/: CMakeLists.txt  imgui_fonts.cpp  main.cpp
game/: 120cell.hpp  4d.cpp  4d.hpp  600cell.hpp  Animation.cpp  Animation.hpp  Bezier.cpp  Bezier.hpp  CMakeLists.txt  Camera3d.cpp  Camera3d.hpp  Combinatorics.cpp  Combinatorics.hpp  Constants.cpp  Constants.hpp  ConvexHull.cpp  ConvexHull.hpp  Cubemap.hpp  CurvatureTool.cpp  CurveVisualization.cpp  CurveVisualization.hpp  Curves.cpp  Curves.hpp  DoublyConnectedEdgeList.cpp  DoublyConnectedEdgeList.hpp  EntityArray.hpp  FpsCamera3d.cpp  FpsCamera3d.hpp  Game.cpp  Game.hpp  GameRenderer.cpp  GameRenderer.hpp  GeodesicTool.cpp  GeodesicTool.hpp  GuiUtils.cpp  LineGenerator.cpp  LineGenerator.hpp  MainLoop.cpp  MainLoop.hpp  Math.cpp  (+61 more)
game/Curves/: Cycloid.cpp  Cycloid.hpp  Helix.cpp  TenisBallCurve.hpp
game/Physics/: Arbiter.cpp  Arbiter.hpp  Body.cpp  Body.hpp  Collide.cpp  ContactConstraint.cpp  ContactConstraint.hpp  Joint.cpp  Joint.hpp  World.cpp  World.hpp
game/Shaders/: basicShading.data  basicShading.frag  basicShading.vert  bullet.data  bullet.frag  colored.data  colored.frag  colored.vert  coloredShading.data  coloredShading.frag  coloredShading.vert  cubemap.data  cubemap.frag  cubemap.vert  flowParticle.data  flowParticle.frag  flowParticle.vert  fog.glsl  homogenous.data  homogenous.frag  homogenous.vert  oit.glsl  shading.glsl  sphereImpostor.data  sphereImpostor.frag  sphereImpostor.vert  sphereImpostor2.data  sphereImpostor2.frag  sphereImpostor2.vert  sphericalPolygon.data  sphericalPolygon.frag  sphericalPolygon.vert  stereographic.glsl  surface.data  surface.frag  text3.data  text3.frag  text3.vert  texturedFullscreenQuad.data  texturedFullscreenQuad.frag  (+6 more)
game/Shaders/Utils/: posFromDepth.glsl
game/Surfaces/: Catenoid.cpp  Catenoid.hpp  ChristoffelSymbols.hpp  Cone.cpp  Cone.hpp  Connectivity.hpp  GenerateParametrization.cpp  Helicoid.cpp  Helicoid.hpp  HyperbolicParaboloid.cpp  KleinBottle.cpp  KleinBottle.hpp  MobiusStrip.cpp  MobiusStrip.hpp  MonkeySaddle.cpp  ProjectivePlane.cpp  ProjectivePlane.hpp  Pseudosphere.cpp  Pseudosphere.hpp  RectParametrization.cpp  RectParametrization.hpp  RectangleParametrization.hpp  Sphere.cpp  Sphere.hpp  Torus.cpp  Torus.hpp  Trefoil.cpp  Trefoil.hpp  calculate.ipynb
game2/: CMakeLists.txt  GameRenderer.hpp  MainLoop.cpp  MainLoop.hpp  ideas.txt  main.cpp
visualization/: CMakeLists.txt  CurvatureTool.cpp  CurvatureTool.hpp  CurveVisualization.cpp  CurveVisualization.hpp  Curves.hpp  FpsCamera3d.cpp  FpsCamera3d.hpp  GeodesicTool.cpp  GuiUtils.hpp  MainLoop.cpp  MatrixMath.hpp  MeshUtils.hpp  PerlinNoise.hpp  PlotUtils.hpp  RayIntersection.cpp  Renderer.hpp  Sort.hpp  SurfaceCamera.hpp  SurfaceInfo.cpp  Surfaces.cpp  Surfaces.hpp  Tri3d.cpp  Utils.cpp  Utils.hpp  VectorFieldTool.cpp  VectorFieldTool.hpp  Visualization.hpp  Visualization4d.hpp  ideas.txt
visualization/Curves/: Helix.cpp  Helix.hpp  TrefoilKnot.hpp  VivanisCurve.cpp  VivanisCurve.hpp  curves.txt
visualization/Shaders/: colored.data  coloredShading.data  coloredShading.frag  coloredShading.vert  flowParticle.frag  flowParticle.vert
visualization/Surfaces/: Cone.hpp  EnneperSurface.cpp  EnneperSurface.hpp  GenerateParametrization.cpp  GenerateParametrization.hpp  Helicoid.cpp  HyperbolicParaboloid.hpp  MonkeySaddle.hpp  ProjectivePlane.hpp  Pseudosphere.hpp  RectParametrization.hpp  Sphere.hpp  Torus.hpp
